# RL_Thesis

./: .gitignore  requirements.txt
others/: modified_file.txt
rl_env/: CMakeLists.txt  package.xml
rl_env/config/: ur5e_test.yaml
rl_env/src/: env_mi.py  gazebo_connection.py  openai_ros_common.py  robot_env.py  robot_gazebo_env.py  task_env.py  task_env_con.py  task_env_v2.py  task_envs_list.py
rl_training/: CMakeLists.txt  package.xml
rl_training/launch/: ur5e_training.launch  ur5e_training_con.launch  ur5e_training_dqn.launch  ur5e_training_dqnsb.launch  ur5e_training_td3.launch  (+1 more)
ur5e_with_optik/: README.md
ur5e_with_optik/ur5e_with_optik/: CMakeLists.txt  package.xml
ur5e_with_optik/ur5e_with_optik/config/ur5e/: visual_parameters.yaml
ur5e_with_optik/ur5e_with_optik/launch/: ur5e_gazebo.launch
ur5e_with_optik/ur5e_with_optik/launch/inc/: load_ur.launch.xml  load_ur5e.launch.xml
ur5e_with_optik/ur5e_with_optik/meshes/collision/: 20220819_LMG_Adapter_SCE_in_m.stl  complete_optik.stl
ur5e_with_optik/ur5e_with_optik/scripts/: cartesian_goal.py  example.py  forward_kinematics.py
ur5e_with_optik/ur5e_with_optik/scripts/RBT/: ik.py
ur5e_with_optik/ur5e_with_optik/src/: cartesian_planner.cpp  jerk_optimization.cpp
ur5e_with_optik/ur5e_with_optik/urdf/: ur5e_measurement_tool.xacro  ur5e_optik.xacro  ur5e_with_measurement_tool.urdf  ur5e_with_measurement_tool.xacro  ur5e_with_measurement_tool_gazebo.xacro  ur5e_with_optik.urdf  ur5e_with_optik.xacro  ur5e_with_optik_bck.urdf  ur5e_with_optik_gazebo.xacro  ur5e_with_optik_rbt.xacro
(+72 files in other folders)
